# py-fhirFacade

./: .env.example  Dockerfile  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml
.devcontainer/: devcontainer.json
app/: config.py  main.py
app/db/: connection.py
app/engine/: base.py  loader.py  registry.py
app/mappers/: condition.py  encounter.py  patient.py  practitioner.py
app/middleware/: auth.py
app/routes/: __init__.py  fhir.py  patient.py
